# eigen-git-mirror

./: .hgeol  .hgignore  .hgtags  .krazy  .travis.yml  CMakeLists.txt  CMakeLists_mkl.txt  COPYING.README  CTestConfig.cmake  Doxyfile  INSTALL  Mainpage.dox  README.md  TODO  eigen2.pc.in  signature_of_eigen3_matrix_library
Eigen/: Array  CMakeLists.txt  Cholesky  CholmodSupport  Core  CoreDeclarations  Dense  Eigen2Support  EigenSolver  Eigenvalues  Geometry  Householder  IterativeLinearSolvers  Jacobi  LU  LeastSquares  LevenbergMarquardt  MetisSupport  OrderingMethods  PARDISOSupport  PaStiXSupport  PardisoSupport  QR  QtAlignedMalloc  Regression  SPQRSupport  SVD  Sparse  SparseCholesky  SparseCore  SparseLU  SparseQR  StdList  StdVector  SuperLUSupport  UmfPackSupport
Eigen/Core/: Block.h  Cast.h  Coeffs.h  Column.h  Conjugate.h  DiagonalCoeffs.h  DiagonalMatrix.h  Dot.h  DynBlock.h  Eval.h  Identity.h  Map.h  Matrix.h  MatrixBase.h  MatrixRef.h  Minor.h  NumTraits.h  Ones.h  OperatorEquals.h  Opposite.h  Product.h  Random.h  Row.h  ScalarMultiple.h  Sum.h  Trace.h  Transpose.h  Util.h  Zero.h
Eigen/src/: CMakeLists.txt
bench/btl/: CMakeLists.txt  README
blas/: CMakeLists.txt  GeneralRank1Update.h  PackedSelfadjointProduct.h  README.txt  Rank2Update.h  SelfadjointPackedProduct.h  blas.h  cgbmv.f  common.h  complex_double.cpp  complex_single.cpp  dgbmv.f  double.cpp  level1_cplx_impl.h  level1_impl.h  level2_cplx_impl.h  level2_impl.h  level2_real_impl.h  level3_impl.h  sgbmv.f  single.cpp  xerbla.cpp  zgbmv.f
blas/testing/: CMakeLists.txt  runblastest.sh
demos/mandelbrot/: CMakeLists.txt  README  mandelbrot.cpp  mandelbrot.h
demos/opengl/: CMakeLists.txt  camera.cpp  camera.h  gpuhelper.cpp  gpuhelper.h  icosphere.cpp  icosphere.h  quaternion_demo.cpp  quaternion_demo.h  trackball.cpp  trackball.h
doc/: A05_PortingFrom2To3.dox  A10_Eigen2SupportModes.dox  AsciiQuickReference.txt  B01_Experimental.dox  C00_QuickStartGuide.dox  C01_Matrix.dox  C01_QuickStartGuide.dox  C01_TutorialCore.dox  C01_TutorialMatrixClass.dox  C02_TutorialMatrixArithmetic.dox  C03_TutorialArrayClass.dox  C03_TutorialGeometry.dox  C04_TutorialBlockOperations.dox  C05_TutorialAdvancedInitialization.dox  C05_TutorialLinearAlgebra.dox  C06_TutorialLinearAlgebra.dox  C07_TutorialReductionsVisitorsBroadcasting.dox  C07_TutorialSparse.dox  C08_TutorialGeometry.dox  C09_TutorialSparse.dox  C10_TutorialMapClass.dox  CMakeLists.txt  CoeffwiseMathFunctionsTable.dox  CustomizingEigen.dox  CustomizingEigen_NullaryExpr.dox  D01_StlContainers.dox  D03_WrongStackAlignment.dox  D07_PassingByValue.dox  D09_StructHavingEigenMembers.dox  D11_UnalignedArrayAssert.dox  Doxyfile.in  Experimental.dox  FixedSizeVectorizable.dox  FunctionsTakingEigenTypes.dox  I00_CustomizingEigen.dox  I01_TopicLazyEvaluation.dox  I02_HiPerformance.dox  I03_InsideEigenExample.dox  I05_FixedSizeVectorizable.dox  I08_StorageOrders.dox  (+59 more)
doc/examples/: CMakeLists.txt  QuickStart_example.cpp  QuickStart_example2_dynamic.cpp  QuickStart_example2_fixed.cpp  TutorialLinAlgExSolveColPivHouseholderQR.cpp  TutorialLinAlgSVDSolve.cpp  TutorialLinAlgSetThreshold.cpp  Tutorial_ArrayClass_accessors.cpp  Tutorial_ArrayClass_addition.cpp  Tutorial_ArrayClass_addition_scalar.cpp  Tutorial_ArrayClass_interop.cpp  Tutorial_ArrayClass_interop_array.cpp  Tutorial_ArrayClass_interop_matrix.cpp  Tutorial_ArrayClass_mult.cpp  Tutorial_BlockOperations_block_assignment.cpp  Tutorial_BlockOperations_colrow.cpp  Tutorial_BlockOperations_corner.cpp  Tutorial_BlockOperations_print_block.cpp  Tutorial_BlockOperations_vector.cpp  Tutorial_PartialLU_solve.cpp  Tutorial_ReductionsVisitorsBroadcasting_broadcast_1nn.cpp~  Tutorial_ReductionsVisitorsBroadcasting_broadcast_simple.cpp~  Tutorial_ReductionsVisitorsBroadcasting_maxnorm.cpp  Tutorial_ReductionsVisitorsBroadcasting_reductions_bool.cpp  Tutorial_ReductionsVisitorsBroadcasting_reductions_norm.cpp  Tutorial_ReductionsVisitorsBroadcasting_reductions_norm.cpp~  Tutorial_ReductionsVisitorsBroadcasting_visitors.cpp~  Tutorial_simple_example_dynamic_size.cpp  Tutorial_simple_example_fixed_size.cpp  class_Block.cpp  class_Cast.cpp  class_Column.cpp  class_CwiseBinaryOp.cpp  class_CwiseUnaryOp.cpp  class_DynBlock.cpp  class_Eval.cpp  class_FixedBlock.cpp  class_FixedReshape.cpp  class_FixedVectorBlock.cpp  class_Reshape.cpp  (+9 more)
doc/snippets/: .krazy  AngleAxis_mimic_euler.cpp  Array_initializer_list2_cxx11.cpp  Array_initializer_list_cxx11.cpp  CMakeLists.txt  Cholesky_solve.cpp  ComplexEigenSolver_eigenvalues.cpp  Cwise_abs.cpp  Cwise_abs2.cpp  Cwise_boolean_and.cpp  Cwise_boolean_not.cpp  Cwise_boolean_or.cpp  Cwise_boolean_xor.cpp  Cwise_cos.cpp  Cwise_cube.cpp  Cwise_equal_equal.cpp  Cwise_erf.cpp  Cwise_erfc.cpp  Cwise_exp.cpp  Cwise_greater.cpp  Cwise_greater_equal.cpp  Cwise_inverse.cpp  Cwise_isFinite.cpp  Cwise_isInf.cpp  Cwise_isNaN.cpp  Cwise_less.cpp  Cwise_less_equal.cpp  Cwise_lgamma.cpp  Cwise_log.cpp  Cwise_max.cpp  Cwise_min.cpp  Cwise_minus.cpp  Cwise_minus_equal.cpp  Cwise_not_equal.cpp  Cwise_plus.cpp  Cwise_plus_equal.cpp  Cwise_pow.cpp  Cwise_product.cpp  (+130 more)
test/: AnnoyingScalar.h  CMakeLists.txt  adjoint.cpp  alignedbox.cpp  array.cpp  array_cwise.cpp  array_for_matrix.cpp  array_replicate.cpp  array_reverse.cpp  bandmatrix.cpp  basicstuff.cpp  bdcsvd.cpp  bicgstab.cpp  block.cpp  boostmultiprec.cpp  buildtests.in  cholesky.cpp  cholmod_support.cpp  commainitializer.cpp  conjugate_gradient.cpp  conservative_resize.cpp  constructor.cpp  corners.cpp  ctorleak.cpp  cuda_basic.cu  cuda_common.h  cwiseop.cpp  dense_storage.cpp  determinant.cpp  diagonal.cpp  diagonalmatrices.cpp  dontalign.cpp  dynalloc.cpp  eigen2support.cpp  eigensolver.cpp  eigensolver_complex.cpp  eigensolver_generalized_real.cpp  eigensolver_generic.cpp  eigensolver_selfadjoint.cpp  evaluators.cpp  (+140 more)
tvmet-1.7.1/: AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.1  LICENSE  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  configure  configure.ac  tvmet-config.1  tvmet-config.in  tvmet.m4  tvmet.spec  tvmet.spec.in
(+1622 files in other folders)
